examples/csharp/errors/invalid-request/obj/Debug/net8.0/InvalidRequest.AssemblyInfoInputs.cache
8bec8036076397122a3cc40becf7f08fb855bc6e16d5ff835e2c30fe04098457
